test/files/neg/bug0418.scala
object Test {
  null match { case Foo12340771.Bar(x) => x }
}
